--- a/templates/yaml/3/basic.hbs
+++ b/templates/yaml/3/basic.hbs
@@ -1,6 +1,6 @@
 openapi: 3.0.5
 info:
-  version: '1.0.0'
+  version: '0.0.1'
   title: {{api-name}} API
   description: 'Change the description of your {{api-name}} API. Have a look [here](https://github.com/eriklenaerts/api-system/#/content/common/swagger-docs?id=info-object) for tips on writing good documentation.'
 servers:
@@ -8,7 +8,11 @@ servers:
     description: Production server (uses live data)
   - url: https://sandbox-api.{{api-name}}.com:8443/v1
     description: Sandbox server (uses test data)
+{{#if entity.length}}
 paths:
+{{else}}
+paths: {}    
+{{/if}}
 {{#each entity}}
   /{{collection}}:
     get:
