--- a/templates/yaml/v3/basic.hbs
+++ b/templates/yaml/v3/basic.hbs
@@ -5,7 +5,7 @@ info:
   description: > 
     This {{name}} API is generated based on the specifications of the [Digipolis API System 7.0](https://antwerp-api.digipolis.be/). Here are some tips what you can do next: 
     
-    Here are some tips **what you can do next:** 
+    Here are some tips **you can do next:** 
 
       - Check if all resources (like {{resources.0.name}}) require all operations that were generated, some parts of the API may be readOnly so remove the operations not needed
       - The schema of all resources (or models) are examples here, be sure to adjust them to your case at hand
